--- a/css/style.css
+++ b/css/style.css
@@ -47,9 +47,9 @@ body button {
 }
 
 .container {
-    margin: auto;
+    margin: 0 auto;
     padding: 0 15px;
-    width: 1200px;
+    max-width: 1200px;
 }
 
 .header-container,
@@ -58,8 +58,7 @@ body button {
 .auth-nav,
 .benefits-list,
 .activity-conteiner,
-.team-container
-{
+.team-container {
     display: flex;            
 }
  
@@ -75,7 +74,6 @@ body button {
     font-size: 26px;
     line-height: 1.2;
     letter-spacing: 0.03em;
-    
 }
 .logo-footer {
     display: block;
@@ -91,10 +89,11 @@ body button {
 .accent {
     color: var(--blue);
 }
-
-.site-nav .item:not(:last-child) {
-    margin-right: 50px;
+.site-nav {
+    align-items: center;
+    gap: 50px;
 }
+
 .site-nav a {
     display: block;
     padding: 32px 0;
@@ -128,6 +127,9 @@ body button {
 }
 .section {
     padding: 94px 0;
+}
+.section-smal {
+    padding-top: 94px;
 }
 .hero {
     background-color: var(--grey-darck);
@@ -168,13 +170,12 @@ body button {
     clip-path: inset(50%);
     margin: -1px;
 } 
+.benefits-list  {
+gap: 30px;
+}
 .benefits-list .item {
     width: calc((100% - 90px) / 4);
 }
-.benefits-list .item +.item {
-    margin-left: 30px;
-}
-
 .benefit-name {
     margin-bottom: 10px;
     text-transform: uppercase;
@@ -190,26 +191,27 @@ body button {
     letter-spacing: 0.03em;
 }
 
-.benefits-activity h2 {
+.benefits h2, .activity h2 {
     margin-bottom: 50px;
-    margin-top: 94px;
     font-size: 36px;
     line-height: 1.2;
     letter-spacing: 0.03em;
     text-align: center;
     color: var(--secondblack);
 }
+.activity-conteiner {
+    gap: 30px;
+}
 .activity-conteiner .item {
-    width: calc((100% - 60px) / 3)
+    width: calc((100% - 60px) / 3);
 }
-.activity-conteiner .item +.item {
-    margin-left: 30px;
-}
-
 .team {
     background-color: var(--secondwhite);
 }
-
+.team-container .team-item{
+    background-color: #fff;
+    width: calc((100% - 90px) / 4);
+}
 .team-title {
     margin-bottom: 50px;
     font-size: 36px;
@@ -237,15 +239,12 @@ body button {
     text-align: center;
 }
 
-.team-container .team-item {
-    width: calc((100% - 90px) / 4) ;
+.team-list {
+    gap: 30px;
 }
 
-.team-container .team-item+.team-item {
-    margin-left: 30px;
-}
 .employee {
-    padding: 30px 0;
+    padding: 30px 10px;
 }
 
 footer {
@@ -274,10 +273,8 @@ footer {
 .filters-container {
     display: flex;
     justify-content: center;
+    gap: 8px;
     margin-bottom: 50px;
-}
-.filters-container .item +.item {
-    margin-left: 8px;
 }
 
 .filters-container button {
@@ -301,18 +298,11 @@ footer {
     display: flex;
     flex-wrap: wrap;
 }
-
+.projects-list {
+    gap: 30px;
+}
 .prodjects-container .item {
-    margin-right: 30px;
-    margin-bottom: 30px;
     width: calc((100% - 60px) / 3);
-}
-
-.prodjects-container .item:nth-child(3n) {
-    margin-right: 0;
-}
-.prodjects-container .item:nth-last-child(-n + 3) {
-    margin-bottom: 0;
 }
 
 .one-prodject {
